--- a/budget.html
+++ b/budget.html
@@ -159,5 +159,17 @@
 			</footer>	
 		</div>
 		<script src="budget.js"></script>
+		<script>
+			let NavHover = document.querySelectorAll(".nav-item");
+			NavHover.forEach( item => {
+				item.addEventListener('mouseover', (e) => {
+					item.style.borderBottomStyle = "solid";
+					item.style.borderWidth = "1px";
+				});
+				item.addEventListener('mouseout', (e) => {
+					item.style.borderBottomStyle = "none";
+				});
+			});
+		</script>
 	</body>
 </html>
